==> mprse/mbed-os/targets/TARGET_Atmel/TARGET_SAM_CortexM4/spi_api.c <==
#include "device.h"
#include "dma_api.h"
#include "buffer.h"
#include "spi_api.h"
#include "pinmap.h"
#include "spi_driver.h"
#include "PeripheralPins.h"
#include "pdc.h"
#define SPI_CHIP_SEL 0
#define SPI_CLK_POLARITY 0
#define SPI_CLK_PHASE 0
#define SPI_LAST	0
#define SPI_DLYBS 0x40
#define SPI_DLYBCT 0x10
#define MAX_SPI	8

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel /*Not Used*/)
{
    MBED_ASSERT(obj);
    MBED_ASSERT(mosi !=NC && miso!=NC && sclk !=NC );

    if (g_sys_init == 0) {
        sysclk_init();
        system_board_init();
        g_sys_init = 1;
    }

    Spi *sercombase = pinmap_find_sercom(mosi,miso,sclk);
    MBED_ASSERT(sercombase!=NC);

    pinmap_find_spi_info(sercombase, obj);
    MBED_ASSERT(obj->spi.flexcom!=NC);
    MBED_ASSERT(obj->spi.pdc!=NC);

    /* Configure SPI pins */
    pin_function(mosi, pinmap_find_function(mosi, PinMap_SPI_MOSI));
    ioport_disable_pin(mosi);

    pin_function(miso, pinmap_find_function(miso, PinMap_SPI_MISO));
    ioport_disable_pin(miso);

    pin_function(sclk, pinmap_find_function(sclk, PinMap_SPI_SCLK));
    ioport_disable_pin(sclk);

#if (SAMG55)
    /* Enable the peripheral and set SPI mode. */
    flexcom_enable(obj->spi.flexcom);
    flexcom_set_opmode(obj->spi.flexcom, FLEXCOM_SPI);
#else
    /* Configure an SPI peripheral. */
    spi_enable_clock(sercombase);
#endif
    spi_disable(sercombase);
    spi_reset(sercombase);
    spi_set_lastxfer(sercombase);
    spi_set_master_mode(sercombase);
    spi_disable_mode_fault_detect(sercombase);
    spi_set_peripheral_chip_select_value(sercombase, SPI_CHIP_SEL);
    spi_set_clock_polarity(sercombase, SPI_CHIP_SEL, SPI_CLK_POLARITY);
    spi_set_clock_phase(sercombase, SPI_CHIP_SEL, SPI_CLK_PHASE);
    spi_set_bits_per_transfer(sercombase, SPI_CHIP_SEL, SPI_CSR_BITS_8_BIT);
    spi_set_baudrate_div(sercombase, SPI_CHIP_SEL,(sysclk_get_cpu_hz() / gSPI_clock));
    spi_set_transfer_delay(sercombase, SPI_CHIP_SEL, SPI_DLYBS,SPI_DLYBCT);

    spi_enable(sercombase);

    pdc_disable_transfer(obj->spi.pdc, PERIPH_PTCR_RXTDIS |	PERIPH_PTCR_TXTDIS);

    obj->spi.spi_base=sercombase;
    obj->spi.cs= SPI_CHIP_SEL;
    obj->spi.polarity=SPI_CLK_POLARITY;
    obj->spi.phase=SPI_CLK_PHASE;
    obj->spi.transferrate=SPI_CSR_BITS_8_BIT;
    obj->spi.is_slave=0;
}

void spi_free(spi_t *obj)
{
    MBED_ASSERT(obj);
    spi_disable(obj->spi.spi_base);
    spi_reset(obj->spi.spi_base);
    flexcom_disable((Flexcom *)obj->spi.flexcom);
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    uint32_t transferrate= get_transfer_rate(bits);
    MBED_ASSERT(transferrate!=NC);

    spi_disable(obj->spi.spi_base);
    obj->spi.transferrate=transferrate;
    if(slave) {
        spi_set_slave_mode(obj->spi.spi_base);
        obj->spi.is_slave=1;
    } else {
        spi_set_master_mode(obj->spi.spi_base);
        obj->spi.is_slave=0;
    }
    spi_set_bits_per_transfer(obj->spi.spi_base, obj->spi.cs, obj->spi.transferrate);
    spi_set_clock_phase(obj->spi.spi_base, SPI_CHIP_SEL, (mode & 0x01));
    spi_set_clock_polarity(obj->spi.spi_base, SPI_CHIP_SEL, (mode & 0x02));

    obj->spi.phase=(mode & 0x01);
    obj->spi.polarity=(mode & 0x02);
    spi_enable(obj->spi.spi_base);
}

void spi_frequency(spi_t *obj, int hz)
{
    spi_disable(obj->spi.spi_base);
    int16_t baudrate_div=spi_calc_baudrate_div(hz, sysclk_get_cpu_hz());
    spi_set_baudrate_div(obj->spi.spi_base,obj->spi.cs,(uint8_t)baudrate_div);
    spi_enable(obj->spi.spi_base);
}

int  spi_master_write(spi_t *obj, int value)
{
    spi_status_t status=spi_write(obj->spi.spi_base,(uint16_t)value,obj->spi.cs,SPI_LAST);
    if(status ==SPI_OK) {
        uint16_t data;
        status =spi_read(obj->spi.spi_base,&data,&obj->spi.cs);
        if(status == SPI_OK)
            return data;
    }
    return 0;
}

int  spi_slave_read(spi_t *obj)
{
    uint16_t data;
    spi_status_t status =spi_read(obj->spi.spi_base, &data, &obj->spi.cs);
    if(status == SPI_OK)
        return data;
    return 0;
}

void spi_slave_write(spi_t *obj, int value)
{
    spi_write(obj->spi.spi_base,(uint16_t)value,obj->spi.cs,SPI_LAST);
}

void spi_master_transfer(spi_t *obj, const void *tx, size_t tx_length, void *rx, size_t rx_length, uint8_t bit_width, uint32_t handler, uint32_t event, DMAUsage hint)
{
    uint32_t pdcenable=0;

    if(bit_width) {
        uint32_t transferrate= get_transfer_rate(bit_width);
        spi_set_bits_per_transfer(obj->spi.spi_base, obj->spi.cs, transferrate);
    }

    if(tx) {
        pdc_packet_t pdc_packet_tx;
        pdc_packet_tx.ul_addr=(uint32_t)tx;
        pdc_packet_tx.ul_size=tx_length;

        pdcenable|=PERIPH_PTCR_TXTEN;
        /* Configure PDC for data send */
        pdc_tx_init(obj->spi.pdc, &pdc_packet_tx, NULL);
    }

    if(rx) {
        pdc_rx_clear_cnt(obj->spi.pdc);
        pdc_packet_t pdc_packet_rx;
        pdc_packet_rx.ul_addr=(uint32_t)rx;
        pdc_packet_rx.ul_size=rx_length;
        pdcenable|=PERIPH_PTCR_RXTEN;
        char *rxbuffer=(char *)rx;
        for(uint8_t index=0; index<rx_length; index++, rxbuffer++)
            *rxbuffer=SPI_FILL_WORD;

        /* Configure PDC for data receive */
        pdc_rx_init(obj->spi.pdc, &pdc_packet_rx, NULL);
    }

    obj->spi.dma_usage=hint;
    obj->spi.event=event;

    NVIC_ClearPendingIRQ(obj->spi.irq_type);
    NVIC_DisableIRQ(obj->spi.irq_type);
	NVIC_SetVector(obj->spi.irq_type,handler);
    NVIC_EnableIRQ(obj->spi.irq_type);

    /* Enable SPI IRQ */
    spi_enable_interrupt(obj->spi.spi_base, SPI_IER_RXBUFF| SPI_IER_TXBUFE | SPI_IER_MODF | SPI_IER_OVRES);

    /* Enable PDC transfers */
    pdc_enable_transfer(obj->spi.pdc, pdcenable );

}

uint32_t spi_irq_handler_asynch(spi_t *obj)
{
    uint32_t event=0;

    // Data transferred via DMA
    if((obj->spi.spi_base->SPI_SR & SPI_IER_TXBUFE)) {
	    spi_disable_interrupt(obj->spi.spi_base, SPI_IDR_TXBUFE | SPI_IDR_MODF | SPI_IDR_OVRES);
        if(obj->spi.event | SPI_EVENT_COMPLETE)
            event |=SPI_EVENT_COMPLETE;
    }

    if((obj->spi.spi_base->SPI_SR & SPI_IER_RXBUFF)) {
	    spi_disable_interrupt(obj->spi.spi_base, SPI_IDR_RXBUFF | SPI_IDR_MODF | SPI_IDR_OVRES);
	    if(obj->spi.event | SPI_EVENT_COMPLETE)
	    event |=SPI_EVENT_COMPLETE;
    }

    if(obj->spi.spi_base->SPI_SR & SPI_SR_MODF) {
        if(obj->spi.event | SPI_EVENT_ERROR)
            event |=SPI_EVENT_ERROR;
    }

    if(obj->spi.spi_base->SPI_SR & SPI_SR_OVRES) {
        if(obj->spi.event | SPI_EVENT_RX_OVERFLOW)
            event |=SPI_EVENT_RX_OVERFLOW;
    }

    return event;
}

void spi_abort_asynch(spi_t *obj)
{
    /* Disable PDC transfers */
    pdc_disable_transfer(obj->spi.pdc, PERIPH_PTCR_RXTDIS | PERIPH_PTCR_TXTDIS);

    /* Clear PDC buffer receive counter */
    pdc_rx_clear_cnt(obj->spi.pdc);

    /* Disable SPI IRQ */
    spi_disable_interrupt(obj->spi.spi_base, SPI_IDR_TXBUFE);
    spi_disable_interrupt(obj->spi.spi_base, SPI_IDR_RXBUFF);

    /* Disable SPI interrupt */
    NVIC_DisableIRQ(obj->spi.irq_type);
}
